<?xml version="1.0"?>
<package format="2">
  <name>cw4_helm</name>
  <version>0.0.0</version>
  <description>The cw4_helm package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>asv_msgs</depend>
  <depend>asv_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>project11_msgs</depend>
  <depend>roscpp</depend>
  <depend>project11</depend>
  <depend>sensor_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
